--- a/quiz.html
+++ b/quiz.html
@@ -102,21 +102,22 @@
     <div class="container" id="start-container">
         <h2>Scegli un argomento per iniziare il quiz:</h2>
         <div class="options">
-            <button onclick="startQuiz('cardiocircolatorio')">Sistema Cardiocircolatorio</button>
-            <button onclick="startQuiz('respiratorio')">Sistema Respiratorio</button>
-            <button onclick="startQuiz('nervoso')">Sistema Nervoso</button>
-            <button onclick="startQuiz('locomotore')">Sistema Locomotore</button>
-            <button onclick="startQuiz('digerente')">Sistema Digerente</button>
             <button onclick="startQuiz('cellula')">La Cellula</button>
+            <button onclick="startQuiz('cardiocircolatorio')">Apparato Circolatorio</button>
+            <button onclick="startQuiz('respiratorio')">Apparato Respiratorio</button>
+            <button onclick="startQuiz('nervoso')">Apparato Nervoso</button>
+            <button onclick="startQuiz('locomotore')">Apparato Locomotore</button>
+            <button onclick="startQuiz('digerente')">Apparato Digerente</button>
         </div>
         <div id="scoreboard">
             <h3>Punteggi salvati:</h3>
-            <p>Sistema Cardiocircolatorio: <span id="score-cardiocircolatorio">0</span> punti</p> <!-- -->
-            <p>Sistema Respiratorio: <span id="score-respiratorio">0</span> punti</p>
-            <p>Sistema Nervoso: <span id="score-nervoso">0</span> punti</p>
-            <p>Sistema Locomotore: <span id="score-locomotore">0</span> punti</p>
-            <p>Sistema Digerente: <span id="score-digerente">0</span> punti</p>
-            <p>La Cellula: <span id="score-cellula">0</span> punti</p>
+            <p>La Cellula: <span id="score-cellula">0</span> / 5 punti</p>
+            <p>Apparato Circolatorio: <span id="score-cardiocircolatorio">0</span> / 10 punti</p>
+            <p>Apparato Respiratorio: <span id="score-respiratorio">0</span> / 10 punti</p>
+            <p>Apparato Nervoso: <span id="score-nervoso">0</span> / 10 punti</p>
+            <p>Apparato Locomotore: <span id="score-locomotore">0</span> / 10 punti</p>
+            <p>Apparato Digerente: <span id="score-digerente">0</span> / 10 punti</p>
+            
         </div>        
     </div>
 
