--- a/Cellula/fine.html
+++ b/Cellula/fine.html
@@ -7,7 +7,7 @@
     <style>
         body {
             overflow: visible;
-            background-image: url(../sfondo_fine_quiz_higher.png);
+            background-image: url(../immagine_fine_argomento.jpg);
             background-repeat: no-repeat;
             background-position: center;
             background-attachment: fixed;
