--- a/Apparato Circolatorio/cuore_1.html
+++ b/Apparato Circolatorio/cuore_1.html
@@ -47,7 +47,6 @@
             margin-top: 0px;
             font-size: 1.8rem;
             color: #333;
-            display: flex;
         }
         .image img {
             max-width: 70%;
@@ -78,7 +77,7 @@
             <br>
             <br>
             <p>
-                Il cuore dopo che ha ricevuto il sangue da tutto il corpo, per poter spingere il sangue nelle arterie,
+                Il cuore dopo che ha ricevuto <u>il sangue</u> da tutto il corpo, per poter spingere il sangue nelle arterie,
                 si deve contrarre continuamente in modo ritmico, senza il bisogno di essere stimolato dalla nostra volontà.
 
             </p>
@@ -87,8 +86,8 @@
             <br>
             <br>
             <p>
-                Questo processo si chiama ciclo cardiaco e consiste di due fasi e da una brevissima pausa. 
-                Le due fasi si chiamano diastole (dilatazione) e sistole (contrazione).
+                Questo processo si chiama <b style="color: blue">ciclo cardiaco</b> e consiste di due fasi e da una brevissima pausa. 
+                Le due fasi si chiamano <b style="color: blue">diastole</b> (dilatazione) e <b style="color: blue">sistole</b> (contrazione).
             </p>
         </div>
         <br>
