--- a/Apparato Circolatorio/introduzione2.html
+++ b/Apparato Circolatorio/introduzione2.html
@@ -109,8 +109,8 @@
         <div class="content">
             <p>
                 Per funzionare ogni macchina, e quindi anche l'uomo, ha bisogno di carburante da cui riceve energia e ha bisogno di eliminare le sostanze di scarto. 
-                Ovviamente anche tutte le cellule del nostro organismo hanno bisogno di sostanze nutritive ed ossigeno e devono eliminare le sostanze di rifiuto. 
-                Tutto ciò è svolto dall'apparato circolatorio.
+                Ovviamente anche <u>tutte le cellule</u> del nostro organismo hanno bisogno di sostanze nutritive ed ossigeno e devono eliminare le sostanze di rifiuto. 
+                Tutto ciò è svolto dall'<b>apparato circolatorio</b>.
             </p>
             <br>
             <br>
@@ -120,15 +120,15 @@
         <div class="image-row">
             <div>
                 <img src="sangue.png" alt="immagine sangue">
-                <p>Il Sangue</p>
+                <p><b>Il Sangue</b></p>
             </div>
             <div>
                 <img src="vasi.png" alt="immagine vasi">
-                <p>I Vasi Sanguigni</p>
+                <p><b>I Vasi Sanguigni</b></p>
             </div>
             <div>
                 <img src="cuore1.png" alt="immagine cuore">
-                <p>Il Cuore</p>
+                <p><b>Il Cuore</b></p>
             </div>
         </div>
 
