--- a/Apparato Circolatorio/sangue.html
+++ b/Apparato Circolatorio/sangue.html
@@ -74,9 +74,9 @@
 <body>
     <div id="content" class="slide_container_Dim">
         <p>
-            Il sangue è un tessuto connettivo liquido che circola nel nostro corpo attraverso i vasi sanguigni. 
-            E' formato per il circa 55% da una parte liquida chiamata plasma (liquido giallo paglierino formato soprattutto da acqua e sostanze nutritive)
-            e per il restante 45% da una parte corpuscolata formata dai globuli rossi, globuli bianchi e le piastrine.
+            Il <b>sangue</b> è un tessuto connettivo liquido che circola nel nostro corpo attraverso i vasi sanguigni. 
+            E' formato per il circa 55% da una parte liquida chiamata <b>plasma</b> (liquido giallo paglierino formato soprattutto da acqua e sostanze nutritive)
+            e per il restante 45% da una parte corpuscolata formata dai <font color="red">globuli rossi</font>, <font color="white">globuli bianchi</font> e le <font color="yellow">piastrine</font>.
 
         </p>
         <br>
