--- a/Apparato Circolatorio/vasi_sanguigni.html
+++ b/Apparato Circolatorio/vasi_sanguigni.html
@@ -40,7 +40,6 @@
             margin-top: 0px;
             font-size: 1.8rem;
             color: #333;
-            display: flex;
         }
         .img_content .image-row {
             display: flex;
@@ -83,15 +82,14 @@
         <div class="img_content">
             <div class="text_content">
                 <p>
-                    Il sistema vascolare è l'insieme di condutture, o vasi, in cui circola il sangue: in esso si distinguono tre tipi di vasi sanguigni e cioè le arterie, 
-                    le vene e i capillari.
-    
+                    Il sistema vascolare è l'insieme di condutture, o vasi, in cui circola il sangue: in esso si distinguono tre tipi di vasi sanguigni e cioè <b style="color: rgb(220, 0, 0)">le arterie</b>,
+                    <b style="color: blue">le vene</b> e <b style="color: blueviolet">i capillari</b>.
                 </p>
                 <br>
                 <br>
                 <br>
                 <p>
-                    <b>Le Arterie</b>
+                    <b style="color: rgb(220, 0, 0)">Le Arterie</b>
                 </p>
                 <br>
                 <p>
@@ -109,7 +107,7 @@
         <div class="text_content2">
             <div class="text1">
                 <p>
-                    <b>Le vene</b>
+                    <b style="color: blue">Le Vene</b>
                 </p>
                 <br>
                 <p>
@@ -119,7 +117,7 @@
             </div>
             <div class="text2">
                 <p>
-                    <b>I Capillari</b>
+                    <b style="color: rgb(122, 0, 236)">I Capillari</b>
                 </p>
                 <br>
                 <p>
@@ -141,7 +139,7 @@
 
     <div class="buttons">
         <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'sangue.html');" target="content-frame">Indietro</button>
-        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'cuore.html');" target="content-frame">Avanti</button>
+        <button class="button" onclick="playSoundAndNavigate('SoundSlideButt', 'cuore_1.html');" target="content-frame">Avanti</button>
     </div>
     
     <script src="../playAudio.js"></script>    
