--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                             <a href="Apparato Circolatorio/introduzione1.html" target="content-frame" class="sub-item">Introduzione</a>
                             <a href="Apparato Circolatorio/sangue.html" target="content-frame" class="sub-item">Il Sangue</a>
                             <a href="Apparato Circolatorio/vasi_sanguigni.html" target="content-frame" class="sub-item">I Vasi Sanguigni</a>
-                            <a href="Apparato Circolatorio/cuore.html" target="content-frame" class="sub-item">Il Cuore</a>
+                            <a href="Apparato Circolatorio/cuore_1.html" target="content-frame" class="sub-item">Il Cuore (1)</a>
+                            <a href="Apparato Circolatorio/cuore_2.html" target="content-frame" class="sub-item">Il Cuore (2)</a>
                         </div>
                     </div>
                     <div class="item">
