--- a/Respiratorio/Introduzione.html
+++ b/Respiratorio/Introduzione.html
@@ -41,9 +41,12 @@
             
         }
         #text p{
+            background-color: rgba(240, 248, 255, 0.452);
+            border-radius: 10%;
             font-size: 1.5rem;
             font-weight: bold;
-            text-align: center;            
+            text-align: center; 
+            padding: 3%;           
         }
 
     </style>
