--- a/Respiratorio/slide_3.html
+++ b/Respiratorio/slide_3.html
@@ -13,6 +13,8 @@
             margin: auto;
             display: flex;
             flex-direction: row;
+            justify-content: center;
+            align-items: center;
         }
         #text {
             display: flex;
@@ -20,7 +22,6 @@
             padding: 2%;
             width: 60vw;
             height: 80vh;
-            transform: translateY(-15%);
         }
         #image-container {
             width: 45vw;
