--- a/Sistema Nervoso/slide_4.html
+++ b/Sistema Nervoso/slide_4.html
@@ -76,7 +76,7 @@
             </p>
             <div id="textP">
                 <p>
-                    <span id="point" class=highlight-blue>• </span><span class=highlight-blue>Il cervello</span> è la parte più importante e volumosa dell’encefalo,<br> è posto all’interno della <b>scatola cranica</b>, dove è avvolto dalle meningi. La sua superficie esterna è detta <b>corteccia cerebrale</b>, formata da miliardi di cellule nervose e da sostanza grigia.
+                    <span id="point" class=highlight-blue>• </span><span class=highlight-blue>Il cervello</span> è la parte più importante e voluminosa dell’encefalo,<br> è posto all’interno della <b>scatola cranica</b>, dove è avvolto dalle meningi. La sua superficie esterna è detta <b>corteccia cerebrale</b>, formata da miliardi di cellule nervose e da sostanza grigia.
                 </p>
                 <p >All’interno del cervello si trova la sostanza bianca e contiene il <b>talamo</b> e l’<b>ipotalamo</b>.
                     Il <b>talamo</b> rielabora e smista verso aree specifiche della corteccia cerebrale gli stimoli provenienti dagli organi di senso.
