--- a/home.html
+++ b/home.html
@@ -159,12 +159,12 @@
             <p>Ecco cosa esploreremo insieme:</p>
 
             <div class="apparati">
-                <div class="box cellula">🦠 La Cellula</div>
-                <div class="box circolatorio">❤️ Apparato Circolatorio</div>
-                <div class="box respiratorio">🫁 Apparato Respiratorio</div>
-                <div class="box nervoso">🧠 Apparato Nervoso</div>
-                <div class="box locomotore">🦴💪 Apparato Locomotore</div>
-                <div class="box digerente">🍽️ Apparato Digerente</div>
+                <div class="box cellula" style="cursor: pointer;" onclick="location.href='Cellula/introduzione.html';">🦠 La Cellula</div>
+                <div class="box circolatorio" style="cursor: pointer;" onclick="location.href='Apparato Circolatorio/introduzione1.html';">❤️ Apparato Circolatorio</div>
+                <div class="box respiratorio" style="cursor: pointer;" onclick="location.href='Respiratorio/introduzione.html';">🫁 Apparato Respiratorio</div>
+                <div class="box nervoso" style="cursor: pointer;" onclick="location.href='Sistema Nervoso/introduzione.html';">🧠 Apparato Nervoso</div>
+                <div class="box locomotore" style="cursor: pointer;" onclick="location.href='Motorio/introduzione.html';">🦴💪 Apparato Locomotore</div>
+                <div class="box digerente" style="cursor: pointer;" onclick="location.href='Apparato_Digerente/principale.html';">🍽️ Apparato Digerente</div>
                 
             </div>
 
