--- a/Apparato Circolatorio/sangue.html
+++ b/Apparato Circolatorio/sangue.html
@@ -42,7 +42,7 @@
             flex-direction: column;
         }
         #content .image-row img {
-            max-width: 40%;
+            width: 30%;
             height: auto;
             border-radius: 8px;
         }
