--- a/Apparato Circolatorio/vasi_sanguigni.html
+++ b/Apparato Circolatorio/vasi_sanguigni.html
@@ -50,7 +50,7 @@
             flex: 40%;
         }
         .img_content .image-row img {
-            max-width: 65%;
+            width: 60%;
             height: auto;
             border-radius: 8px;
         }
