--- a/Respiratorio/slide_4.html
+++ b/Respiratorio/slide_4.html
@@ -38,12 +38,14 @@
             height: 35vh;
         }
         #cloud_text {
+            align-self: center;
+            justify-self: center;
             border: 6px solid rgb(32, 56, 100);;
             background-color: rgba(240, 248, 255, 0.815);
             border-radius: 60%;
             width: 70vw;
-            height: 27vh;
-            padding: 6%;
+            height: 30vh;
+            padding: 5%;
         }
         #polmons {
             width: 20vw;
