--- a/Apparato Circolatorio/cuore_1.html
+++ b/Apparato Circolatorio/cuore_1.html
@@ -16,13 +16,15 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
         }
         #content{
             text-align: start;
             padding: 20px 20px 0px 20px;
             flex-direction: row;
             display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .image{
             text-align: start;
@@ -49,7 +51,7 @@
             color: #333;
         }
         .image img {
-            max-width: 70%;
+            width: 80%;
             height: auto;
             border-radius: 8px;
         }
