--- a/Apparato Circolatorio/cuore_2.html
+++ b/Apparato Circolatorio/cuore_2.html
@@ -16,7 +16,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
         }
         .content{
             /*text-align: start;
@@ -65,7 +65,7 @@
             color: #333;
         }
         .image img {
-            max-width: 70%;
+            width: 70%;
             height: auto;
             border-radius: 8px;
         }
