--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <a class="sub-btn">Apparato Nervoso<i class="fas fa-angle-right dropdown"></i></a>
+                        <a class="sub-btn">Sistema Nervoso<i class="fas fa-angle-right dropdown"></i></a>
                         <div class="sub-menu">
                             <a href="Sistema Nervoso/Introduzione.html" target="content-frame" class="sub-item">Introduzione</a>
                             <a href="Sistema Nervoso/slide_2.html" target="content-frame" class="sub-item">I Due Sistemi</a>
