--- a/quiz.html
+++ b/quiz.html
@@ -105,7 +105,7 @@
             <button onclick="startQuiz('cellula')">La Cellula</button>
             <button onclick="startQuiz('cardiocircolatorio')">Apparato Circolatorio</button>
             <button onclick="startQuiz('respiratorio')">Apparato Respiratorio</button>
-            <button onclick="startQuiz('nervoso')">Apparato Nervoso</button>
+            <button onclick="startQuiz('nervoso')">Sistema Nervoso</button>
             <button onclick="startQuiz('locomotore')">Apparato Locomotore</button>
             <button onclick="startQuiz('digerente')">Apparato Digerente</button>
         </div>
@@ -114,7 +114,7 @@
             <p>La Cellula: <span id="score-cellula">0</span> / 5 punti</p>
             <p>Apparato Circolatorio: <span id="score-cardiocircolatorio">0</span> / 10 punti</p>
             <p>Apparato Respiratorio: <span id="score-respiratorio">0</span> / 10 punti</p>
-            <p>Apparato Nervoso: <span id="score-nervoso">0</span> / 10 punti</p>
+            <p>Sistema Nervoso: <span id="score-nervoso">0</span> / 10 punti</p>
             <p>Apparato Locomotore: <span id="score-locomotore">0</span> / 10 punti</p>
             <p>Apparato Digerente: <span id="score-digerente">0</span> / 10 punti</p>
             
