--- a/crediti.html
+++ b/crediti.html
@@ -108,27 +108,27 @@
 
         <div class="partecipanti">
             <div class="partecipante">
-                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Mario Rossi" class="img">
-                <p class="nome">Mario Rossi</p>
-                <p class="ruolo">Frontend</p>
+                <img src="Foto_crediti/Vincenzo.jpg" alt="Mario Rossi" class="img">
+                <p class="nome">Vincenzo Grottola</p>
+                <p class="ruolo">Materiale</p>
             </div>
 
             <div class="partecipante">
-                <img src="https://randomuser.me/api/portraits/men/44.jpg" alt="Giovanni Bianchi" class="img">
-                <p class="nome">Giovanni Bianchi</p>
-                <p class="ruolo">UX/UI Design</p>
+                <img src="Foto_crediti/Marco.jpg" alt="Giovanni Bianchi" class="img">
+                <p class="nome">Marco Rossetto</p>
+                <p class="ruolo">Codice</p>
             </div>
 
             <div class="partecipante">
-                <img src="https://randomuser.me/api/portraits/men/62.jpg" alt="Luca Verdi" class="img">
-                <p class="nome">Luca Verdi</p>
-                <p class="ruolo">Backend</p>
+                <img src="Foto_crediti/Daniele.jpg" alt="Luca Verdi" class="img">
+                <p class="nome">Daniele Girardi</p>
+                <p class="ruolo">Documentazione</p>
             </div>
 
             <div class="partecipante">
                 <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Marco Neri" class="img">
-                <p class="nome">Marco Neri</p>
-                <p class="ruolo">Project Manager</p>
+                <p class="nome">Alessandro </p>
+                <p class="ruolo">Documentazione</p>
             </div>
         </div>
 
