--- a/Digerente/d1.html
+++ b/Digerente/d1.html
@@ -20,14 +20,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
         }
         .container1 {
@@ -40,7 +37,6 @@
             text-align: start;
             flex-direction: column;
             display: flex;
-            /*margin-top: 10%;*/
         }
         .sub-container1-text h1 {
             margin-bottom: 0px;
@@ -75,7 +71,6 @@
             flex: 100%;
         }
         .sub-container1-img img {
-            /*max-width: 90%;*/
             width: 32vw;
             height: auto;
             border-radius: 8px;
@@ -98,10 +93,10 @@
             margin-bottom: 10%;
         }
         .border {
-            padding: 10px;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: rgba(240, 255, 255, 0.534);  /* sfondo (opzionale) */
+            padding: 10px;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: rgba(240, 255, 255, 0.534);
         }
         .border p {
             margin-bottom: 0px;
