--- a/Sistema Nervoso/n6.html
+++ b/Sistema Nervoso/n6.html
@@ -9,7 +9,6 @@
             font-family: sans-serif;
             color: #333;
             line-height: 1.6;
-            /*background-color: #f9f9f9;*/
             background: url('ns.png') no-repeat center center fixed;
             background-size: cover;
             display: flex;
@@ -21,14 +20,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
         }
         .container1 {
@@ -60,7 +56,6 @@
             margin-bottom: 0px;
             margin-top: 0px;
             font-size: clamp(16px, 1.5vw + 0.5rem, 24px);
-            /*padding-left: 20px;*/
         }
         .sub-container1-img {
             text-align: start;
@@ -75,7 +70,6 @@
             flex: 100%;
         }
         .sub-container1-img img {
-            /*max-width: 90%;*/
             height: auto;
             border-radius: 8px;
             width: 40vw;
@@ -104,7 +98,6 @@
             margin-right: 4%;
         }
         .sub-container2-img img {
-            /*max-width: 90%;*/
             height: auto;
             border-radius: 8px;
             width: 18vw;
@@ -116,11 +109,11 @@
             margin-bottom: 10%;
         }
         .border {
-            border: 3px solid black;   /* spessore, stile, colore */
-            padding: 10px;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: rgb(255, 192, 0); /* sfondo (opzionale) */
+            border: 3px solid black;
+            padding: 10px;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: rgb(255, 192, 0);
             width: 60vw;
         }
         .border p {
