--- a/Digerente/d2.html
+++ b/Digerente/d2.html
@@ -20,14 +20,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
         }
         .container1 {
@@ -57,7 +54,6 @@
         }
         .sub-container1-img {
             text-align: start;
-            /*padding: 20px 20px 0px 20px;*/
             flex-direction: row;
             display: flex;
 
@@ -68,14 +64,12 @@
             flex: 100%;
         }
         #img1 {
-            /*max-width: 90%;*/
             width: 25vw;
             height: auto;
             border-radius: 8px;
             margin-right: 4%;
         }
         #img2 {
-            /*max-width: 90%;*/
             width: 60vw;
             height: auto;
             border-radius: 8px;
@@ -103,7 +97,6 @@
             flex: 100%;
         }
         .sub-container2-img img {
-            /*max-width: 90%;*/
             height: auto;
             border-radius: 8px;
             width: 15vw;
@@ -118,11 +111,11 @@
             justify-content: start;
         }
         .border {
-            border: 3px solid #004cb6;   /* spessore, stile, colore */
-            padding: 10px;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: #f9f9f9; /* sfondo (opzionale) */
+            border: 3px solid #004cb6;
+            padding: 10px;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: #f9f9f9;
         }
         .border p {
             margin-bottom: 0px;
