--- a/Digerente/d5.html
+++ b/Digerente/d5.html
@@ -20,14 +20,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
         }
         .container1 {
@@ -101,7 +98,6 @@
             flex: 100%;
         }
         .sub-container2-img img {
-            /*max-width: 90%;*/
             height: auto;
             border-radius: 8px;
             width: 18vw;
@@ -114,11 +110,11 @@
             margin-right: 20%;
         }
         .border {
-            border: 7px solid white;;   /* spessore, stile, colore */
-            padding: 3%;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: rgb(247, 150, 70); /* sfondo (opzionale) */
+            border: 7px solid white;
+            padding: 3%;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: rgb(247, 150, 70);
         }
         .border p {
             margin-bottom: 0px;
