--- a/Digerente/d6.html
+++ b/Digerente/d6.html
@@ -20,15 +20,13 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
+            color: black;
         }
         .container1 {
             display: flex;
@@ -45,8 +43,6 @@
             margin-bottom: 0px;
             margin-top: 0px;
             font-size: clamp(16px, 1.5vw + 0.5rem, 24px);
-            color: #333;
-            /*padding-left: 20px;*/
         }
         .sub-container1-img{
             text-align: start;
@@ -80,8 +76,6 @@
             margin-bottom: 0px;
             margin-top: 0px;
             font-size: clamp(16px, 1.5vw + 0.5rem, 24px);
-            color: #333;
-            /*padding-left: 20px;*/
         }
         .sub-container2-img {
             text-align: start;
