--- a/Digerente/d8.html
+++ b/Digerente/d8.html
@@ -20,14 +20,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
             color: black;
         }
@@ -46,7 +43,6 @@
             text-align: start;
             flex-direction: column;
             display: flex;
-            /*margin-top: 10%;*/
         }
         .sub-container1-text h2 {
             margin-bottom: 0px;
@@ -69,10 +65,8 @@
             margin-top: 50px;
             margin-bottom: 10px;
             align-items: center;
-            /*flex: 100%;*/
         }
         .sub-container1-img img {
-            /*max-width: 90%;*/
             width: 16vw;
             height: auto;
             border-radius: 8px;
@@ -82,14 +76,12 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            /*margin-top: 2%;*/
         }
         .container2 p{
             font-size: clamp(15px, 1.5vw + 0.5rem, 22px);
             margin-top: 10%;
         }
         .container2 img {
-            /*max-width: 90%;*/
             height: auto;
             border-radius: 8px;
             width: 20vw;
@@ -103,10 +95,8 @@
             justify-content: center;
             margin-bottom: 5%;
             align-items: center;
-            /*flex: 100%;*/
         }
         .sub-container2-img img {
-            /*max-width: 90%;*/
             height: auto;
             border-radius: 8px;
             width: 20vw;
@@ -123,11 +113,11 @@
             font-size: clamp(15px, 1.5vw + 0.5rem, 22px);
         }
         .border1 {
-            border: 2px dotted rgb(218, 94, 121);   /* spessore, stile, colore */
-            padding: 10px;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: rgba(232, 167, 181, 0.808); /* sfondo (opzionale) */
+            border: 2px dotted rgb(218, 94, 121);
+            padding: 10px;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: rgba(232, 167, 181, 0.808);
         }
         .border1 p {
             margin-bottom: 0px;
@@ -135,11 +125,11 @@
             font-size: clamp(15px, 1.5vw + 0.5rem, 22px);
         }
         .border2 {
-            border: 2px solid  rgb(255, 255, 0);   /* spessore, stile, colore */
-            padding: 10px;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: rgba(209, 185, 111, 0.808); /* sfondo (opzionale) */
+            border: 2px solid  rgb(255, 255, 0);
+            padding: 10px;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: rgba(209, 185, 111, 0.808);
         }
         .border2 p {
             margin-bottom: 0px;
@@ -154,17 +144,14 @@
         }
         .sub-container3-img {
             text-align: start;
-            /*padding: 20px 20px 0px 20px;*/
             flex-direction: row;
             display: flex;
 
             justify-content: center;
             margin-bottom: 14%;
             align-items: center;
-            /*flex: 100%;*/
         }
         .sub-container3-img img {
-            /*max-width: 90%;*/
             height: auto;
             border-radius: 8px;
             width: 26vw;
