--- a/Motorio/l3.html
+++ b/Motorio/l3.html
@@ -19,14 +19,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
         }
         .container1 {
@@ -39,7 +36,6 @@
             text-align: start;
             flex-direction: column;
             display: flex;
-            /*margin-top: 10%;*/
         }
         .sub-container1-text h1 {
             margin-bottom: 0px;
@@ -72,7 +68,6 @@
             flex: 100%;
         }
         .sub-container1-img img {
-            /*max-width: 90%;*/
             width: 32vw;
             height: auto;
             border-radius: 8px;
@@ -111,11 +106,11 @@
             margin-bottom: 10%;
         }
         .border {
-            border: 3px solid #01e1ff;   /* spessore, stile, colore */
-            padding: 10px;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: #f9f9f9; /* sfondo (opzionale) */
+            border: 3px solid #01e1ff;
+            padding: 10px;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: #f9f9f9;
         }
         .border p {
             margin-bottom: 0px;
