--- a/Respiratorio/r1.html
+++ b/Respiratorio/r1.html
@@ -9,7 +9,6 @@
             font-family: sans-serif;
             color: #333;
             line-height: 1.6;
-            /*background-color: #f9f9f9;*/
             background: url('sfondo_respiratorio.png') no-repeat center center fixed;
             background-size: cover;
             display: flex;
@@ -21,14 +20,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
         }
         .container1 {
@@ -66,15 +62,13 @@
             margin-top: 10%;
         }
         h1 {
-            color: #0e2bcc; /* Darker green for title */
-            /*padding-bottom: 10px;
-            margin-bottom: 20px;*/
+            color: #0e2bcc;
             padding-left: 20px;
             margin-top: 10px;
             margin-bottom: 0px;
         }
         h2 {
-            color: #000000; /* Slightly lighter green for section titles */
+            color: #000000;
             margin-top: 40px;
             padding-left: 20px;
             margin-bottom: 0px;
@@ -84,7 +78,6 @@
             padding: 0;
         }
         ul li {
-            /*margin-bottom: 10px;*/
             padding-left: 20px;
             position: relative;
             font-size: clamp(16px, 1.5vw + 0.5rem, 24px);
