--- a/Respiratorio/r3.html
+++ b/Respiratorio/r3.html
@@ -9,7 +9,6 @@
             font-family: sans-serif;
             color: #333;
             line-height: 1.6;
-            /*background-color: #f9f9f9;*/
             background: url('sfondo_respiratorio.png') no-repeat center center fixed;
             background-size: cover;
             display: flex;
@@ -21,14 +20,11 @@
             flex-direction: column;
         }
         .main-container {
-            /*background-color: #fff;*/
             border-radius: 8px;
-            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
-            /*justify-content: center;*/
             align-items: center;
         }
         .container1 {
@@ -101,11 +97,11 @@
             margin-bottom: 10%;
         }
         .border {
-            border: 3px solid #01e1ff;   /* spessore, stile, colore */
-            padding: 10px;            /* spazio interno */
-            display: inline-block;    /* per adattare al contenuto */
-            border-radius: 20px;       /* angoli arrotondati (opzionale) */
-            background-color: #f9f9f9; /* sfondo (opzionale) */
+            border: 3px solid #01e1ff;
+            padding: 10px;
+            display: inline-block;
+            border-radius: 20px;
+            background-color: #f9f9f9;
         }
         .border p {
             margin-bottom: 0px;
