--- a/crediti.html
+++ b/crediti.html
@@ -126,8 +126,8 @@
             </div>
 
             <div class="partecipante">
-                <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Marco Neri" class="img">
-                <p class="nome">Alessandro </p>
+                <img src="Foto_crediti/Alessandro.jpg" alt="Marco Neri" class="img">
+                <p class="nome">Alessandro Trianni</p>
                 <p class="ruolo">Documentazione</p>
             </div>
         </div>
